--- a/client/login.html
+++ b/client/login.html
@@ -31,12 +31,18 @@ fjs.parentNode.insertBefore(js, fjs);
     </script>
     <div class = "login-container">
       <form action="/create-account" method="post">
-        <label for="username">username</label>
-        <input name="username" type="text" />
-        <label for="password1">password</label>
-        <input name="password1" type="password" />
-        <label for="password2">password</label>
-        <input name="password2" type="password" />
+        <div>
+          <label for="username">username</label>
+          <input name="username" type="text" />
+        </div>
+        <div>
+          <label for="password1">password</label>
+          <input name="password1" type="password" />
+        </div>
+        <div>
+          <label for="password2">password</label>
+          <input name="password2" type="password" />
+        </div>
         <input type="submit" />
       </form>
       <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false"></div>
