make account creation skeleton

--- a/client/login.html
+++ b/client/login.html
@@ -30,7 +30,7 @@ fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
     </script>
     <div class = "login-container">
-      <form action="/create-account" method="post">
+      <form action="/create account" method="post">
         <div>
           <label for="username">username</label>
           <input name="username" type="text" />
