Small changes to control panel and added some algorithms for the numerical levels

--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -28,7 +28,7 @@
 	    			<div class="collapse navbar-collapse" id="TheNavBar">
 		    			<ul class="nav navbar-nav navbar-right">
 					               <li> <a href="panelbootstrap.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a></li>
-					               <li><a href="Sign Out"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
+					               <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
 					               <li><a id="Leaf"><span class="glyphicon glyphicon-leaf""></span></a></li>
 
 					         	<div id="Easter" class="EasterEgg">
@@ -117,7 +117,7 @@
 			</div>
 			<script>
 				function confirm_mes(){
-					alert("Settiings Successfully Saved!");
+					alert("Settings Successfully Saved!");
 				}
 			</script>
 		</div>
