--- a/client/controlpanel/panelbootstrap.html
+++ b/client/controlpanel/panelbootstrap.html
@@ -15,6 +15,9 @@
 		<link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/3973-200.png" />
 	</head>
 	<body>
+		<script>
+			var plantname = "Maple";
+		</script>
 		<!--Begin NavBar-->
 		<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
 			<div class="container-fluid">
@@ -31,7 +34,7 @@
 	    			<div class="collapse navbar-collapse" id="TheNavBar">
 		    			<ul class="nav navbar-nav navbar-right">
 					               <li> <a href="settings.html"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-					               <li><a href="Sign Out"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
+					               <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
 					               <li><a id="Leaf"><span class="glyphicon glyphicon-leaf""></span></a></li>
 
 					         	<div id="Easter" class="EasterEgg">
@@ -66,16 +69,49 @@
 		<br/><br/><br/><br/>
 
 		<div class="container">
-			<h1> Let's see how <strong>"Maple"</strong> is doing:</h1>
-			<div id="panel">
+			<script>
+				//This is just to give the site some more personality
+				var num = (Math.floor(Math.random() * 3) + 1); //random from 1 to 3
+				if(num == 1){
+					document.write("<h1>Let's see how <strong>" + plantname + "</strong> is doing: </h1>");
+				}
+				else if (num == 2){
+					document.write("<h1>This is how <strong>" +plantname+ "</strong> is doing: </h1>");
+				}
+				else{
+					document.write("<h1>Let's observe <strong>" +plantname+ "'s</strong> status:</h1>");
+				}
+			</script>
+			<hr/>
+			<!--<h1> Let's see how <strong>"Maple"</strong> is doing:</h1>-->
+			<div id="panel" = style="border-style: double; border-width: 2px; border-color: #ccc">
 				<div class="innerpanel">
 					<h2>Statistics</h2>
 					<div class="panel_status">
 						<script> //Status snippet
 							var txt;
 							var stat = "Status: ";
-							var lvl1att = 1, lvl2att = 1, lvl3att = 1;  //These are the flags
+							var lvl1att = 0, lvl2att = 0, lvl3att = 0;  //These are the flags
 							var code = 0; //by default
+
+							var celcius = 30;
+							var moisture = true;
+
+							//Temp check
+							var faren = (celcius * (9/5) + 32);
+							if(faren > 110 || faren < 32){
+								lvl1att = 1;
+							}
+
+							//Moisture check
+							if(!moisture){
+								lvl2att = 1;
+							}
+
+							//Temp = Celcius, Moisture=T or F, uhh what was light?
+
+
+							//Check for Temperature
 							
 							//we just need to have a way to figure out what will trigger lvl attention to 1
 							//Like the temperature is too high, set off the flag, the moisture is too low,
@@ -93,11 +129,11 @@
 							document.write("<p><strong>" + stat.fontsize(5)  + "</strong> ");
 
 							if(code == 0){
-								txt  = "All Good";
+								txt  = "It's All Good :)";
 								document.write(txt.fontcolor("#009b09").fontsize(4));
 							}
 							else if (code == 1 || code == 2){
-								txt = "Warning!";
+								txt = "Needs Some Attention!";
 								document.write(txt.fontcolor("#b8bf00").fontsize(4));
 							}
 							else if (code == 3){
@@ -137,23 +173,36 @@
 						<div id="Level">
 							<li>Temperature Level</li> 
 						</div>
-						<p>Over 9000&#8451; comparable to phoenix temperature <br>
-						Currently: 4982.222&#8451;</p>
+						<br/>
+						<script>
+							document.write("<p>Current: " + celcius + "&#8451, " + faren + "&#8457 </p>");
+						</script>
+						
 						<br/>
 						<div id="Level">
-							<li>Mositure Level</li> 
+							<li>Mositure Level</li>
 						</div>
-						<p>New Mexico Drought. <br/> Moisture content MC or u (relative to dry weight) = dry basis moisture content</p> 
+						<br/>
+						<script>
+							if(moisture){
+								document.write("<p> There seems to be mositure present :) </p>");
+							}
+							else{
+								document.write("<p>Needs some moisture!</p>");
+							}
+						</script>
 						<br/>
 						<div id="Level">
 							<li>Light Level</li> 
 						</div>
-						<p>Bright as this plants future. <br/> LUX? The metric unit of measure for illuminance of a surface. One lux is equal to one lumen per square meter. One lux equals 0.0929 footcandles.</p>
+						<br/>
+						<p>Bright as this plants future. </p>
+						<br/>
 					</ul>
 					<!--End Statistics-->
 				</div>
 			</div>	
 		</div>
-		<div id="version" style="position: bottom-right;">v2.1</div>
+		<div id="version" style="position: bottom-right;">v2.1: prototype</div>
 	</body>
 </html>
