--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -9,14 +9,14 @@
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		  <link rel="stylesheet" type="text/css" href="css/main.css">
-		<title>PlantPi: Control Panel</title>
+		<title>PlantPi: Dashboard</title>
 
 		<!--Shortcut icon-->
 		<link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/3973-200.png" />
 	</head>
 	<body>
 		<script>
-			var plantname = "Maple";
+			var plantname = "login";
 		</script>
 		<!--Begin NavBar-->
 		<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
@@ -27,7 +27,7 @@
 					           	<span class="icon-bar"></span>
 					           	<span class="icon-bar"></span>
 				        	</button>
-	     				<a class="navbar-brand" href="panelbootstrap.html">PlantPi</a>
+	     				<a class="navbar-brand" href="dashboard.html">PlantPi</a>
 	    			</div>
 
 	    			<!--Allow for better compatability when resizing-->
@@ -40,7 +40,7 @@
 					         	<div id="Easter" class="EasterEgg">
 							<div class="EasterEgg-content">
 						    		<span class="close">&times;</span>
-						    		<img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%"></img>
+						    		<img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%"></img><p style="color:white" >It's a feature :)</p>
 						    	</div>
 						</div>
 				 	</ul>
@@ -94,19 +94,8 @@
 							var lvl1att = 0, lvl2att = 0, lvl3att = 0;  //These are the flags
 							var code = 0; //by default
 
-							var celcius = 30;
-							var moisture = true;
-
-							//Temp check
-							var faren = (celcius * (9/5) + 32);
-							if(faren > 110 || faren < 32){
-								lvl1att = 1;
-							}
-
-							//Moisture check
-							if(!moisture){
-								lvl2att = 1;
-							}
+							var celcius = 70; 
+							var moisture = false;
 
 							//Temp = Celcius, Moisture=T or F, uhh what was light?
 
@@ -119,6 +108,17 @@
 							//This is highly dependant on what type of units we are gonna use though.
 							
 							//-------------------Determination of attention will go here------------------
+
+							//Temp check
+							var faren = (celcius * (9/5) + 32);
+							if(faren > 110 || faren < 32){
+								lvl1att = 1;
+							}
+
+							//Moisture check
+							if(!moisture){
+								lvl2att = 1;
+							}
 
 							//if 0, no attention needed, if 1, attention is needed
 							//lvl1 is temperature, lvl2 is moisture, and lvl3 is light level
