--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -21,13 +21,13 @@
 					           	<span class="icon-bar"></span>
 					           	<span class="icon-bar"></span>
 				        	</button>
-	     				<a class="navbar-brand" href="panelbootstrap.html">PlantPi</a>
+	     				<a class="navbar-brand" href="dashboard.html">PlantPi</a>
 	    			</div>
 
 	    			<!--Allow for better compatability when resizing-->
 	    			<div class="collapse navbar-collapse" id="TheNavBar">
 		    			<ul class="nav navbar-nav navbar-right">
-					               <li> <a href="panelbootstrap.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a></li>
+					               <li> <a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a></li>
 					               <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
 					               <li><a id="Leaf"><span class="glyphicon glyphicon-leaf""></span></a></li>
 
@@ -69,7 +69,7 @@
 			<p>Here you can change various settings for your PlantPi environment.</p>
 			<div class="container">
 				<br/>
-				<form action="#" method="post" id="pi_info">
+				<form action="/associate-device" method="post" id="pi_info">
 					<div class="subsection">
 						<p>PlantPi Infomation</p>
 					</div>
