--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -76,11 +76,11 @@
 					<div class="subform">
 						<div class="form-group">
 						 	<label for="PlantName">Plant Name</label>
-						    	<input type="text" class="form-control" id="PlantName" placeholder="Maple">
+						    	<input type="text" class="form-control" id="PlantName" name="name" placeholder="Maple">
 						 </div>
 						 <div class="form-group">
 						    	<label for="Pi_Device_ID">PlantPi Device ID</label>
-						    	<input type="text" class="form-control" id="Pi_Device_ID" placeholder="A113">
+						    	<input type="text" class="form-control" id="Pi_Device_ID" name="device" placeholder="A113">
 						</div>
 						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
 
