--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -71,6 +71,7 @@
 		<script>
 			function printout () {
 				var groups = JSON.parse(this.responseText);
+				console.log(groups);
 				groupsList.innerHTML = "";
 				for (var group in groups) {
 					groupsList.innerHTML += '<li class="dropdown">\n<a href="#" class="dropdown-toggle" data-toggle="dropdown">' + group.name + '<span class="caret"></span></a></li>';
