--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -74,7 +74,7 @@
 				console.log(groups);
 				groupsList.innerHTML = "";
 				for (var group in groups) {
-					groupsList.innerHTML += '<li class="dropdown">\n<a href="#" class="dropdown-toggle" data-toggle="dropdown">' + group.name + '<span class="caret"></span></a></li>';
+					groupsList.innerHTML += '<li class="dropdown">\n<a href="#" class="dropdown-toggle" data-toggle="dropdown">' + groups[group].name + '<span class="caret"></span></a></li>';
 				}
 			}
 			function loadGroups() {
