--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -126,9 +126,9 @@
 			      	<div class="col-xs-12"> 
 			        		<h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"></span></a></h3><br/>
 			        		<ul class="nav nav-pills nav-stacked">
-						<ul class="nav">
+						<ul class="nav" id="groupsList">
 							<li><h4>Groups:</h4></li>
-							<li class="dropdown" id="groupsList">
+							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Backyard <span class="caret"></span></a>
 							               <ul class="dropdown-menu forAnimate" role="menu">
 							                    	<li><a href="#"><span class="glyphicon glyphicon-leaf"></span>  Jeffery <i style="margin-right: 0.5em; color: #EEEEEE;" class="glyphicon glyphicon-leaf"></a></i></li>
