fixed index popup errs

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 			x.style.display = 'none';
 		} else {
 			x.style.display = 'block';
+            y.style.display = 'none';
 		}
 	};
 	function showSignup() {
@@ -22,6 +23,7 @@
 			x.style.display = 'none';
 		} else {
 			x.style.display = 'block';
+            y.style.display = 'none';
 		}
 	};
 </script>
