might have (might not have) added support to list plants

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -160,10 +160,10 @@ $('.dropdown.keep-open').on({
                         <hr/>
                         <h4>All:</h4>
                         <ul class="nav" style="font-size: 15px;">   
-                            <li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
-                                </button><a href="broken.html"> Jeffery the giant plant who gives oxygen </a>
-                            </li>
-
+                            <li><h4>All:</h4></li>
+                            <div id="plantListContainer"></div>
+                            <li><a href="">Plant A
+                                    <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;"></button></a></li>
                             <li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li>
                             <br />
                             <br />
