fixed style elements for displaying plants

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -164,7 +164,7 @@ $('.dropdown.keep-open').on({
                             <div id="plantListContainer"></div>
                             <li><a href="">Plant A
                                     <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;"></button></a></li>
-                            <li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li>
+                            <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
                             <br />
                             <br />
                         </ul>
