--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -84,7 +84,7 @@ function doWork() {
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a>
-                                <span class="glyphicon glyphicon-user" />
+                                <span class="glyphicon glyphicon-user">
                                     <script>document.write(username);</script>
                                 </span>
                             </a>
@@ -113,33 +113,34 @@ function doWork() {
                 <div class="col-xs-12"> 
                     <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"></span></a></h3><br/>
                     <h4>Groups:</h4>
+
                     <ul class="nav nav-pills nav-stacked">
-                        <ul class="nav" id="groupsList">
-                            <li class="dropdown keep-open">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret"></span>
-                                                <ul class="dropdown-menu keep-open" role="menu">
-                                                <li><a href="#">Cara </a></li>
-                                                <li><a href="#">Raspy</a></li>
-                                                <li><a href="#">Bob</a></li>
-                                                <li><p style="color:#bcbcbc; padding: 3px 20px;">No plants in group</p></li>
-                                              </ul>
-
+                        <li>
+                            <ul class="nav" id="groupsList">
+                                <li class="dropdown keep-open">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret" /></a>
+                                    <ul class="dropdown-menu keep-open" role="menu">
+                                        <li><a href="#">Cara </a></li>
+                                        <li><a href="#">Raspy</a></li>
+                                        <li><a href="#">Bob</a></li>
+                                        <li><p style="color:#bcbcbc; padding: 3px 20px;">No plants in group</p></li>
+                                    </ul>
                                 </li>
-                            <div id="groupsListContainer"></div>
-                            <br/>
-                            <li style="font-size: 12px; float: right;"><a href="settings.html">Manage Groups</a></li>
-                            <li style="font-size: 20px; float: left;"><a onclick="showCreateGroup()">+</a></li>
+                                <div id="groupsListContainer"></div>
+                                <br/>
+                                <li style="font-size: 12px; float: right;"><a href="settings.html">Manage Groups</a></li>
+                                <li style="font-size: 20px; float: left;"><a onclick="showCreateGroup()">+</a></li>
 
-                            <br/><br/>
+                                <br/><br/>
 
-                            <div id="show_create_group" style="display: none;">
-                                <form action="/create-group" method="post">
-                                    <input type="hidden" value=username name="user" id="uname" />
-                                    <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
-                                    <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
-                                </form>
-                            </div>
-                            <script>
+                                <div id="show_create_group" style="display: none;">
+                                    <form action="/create-group" method="post">
+                                        <input type="hidden" value=username name="user" id="uname" />
+                                        <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
+                                        <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
+                                    </form>
+                                </div>
+                                <script>
 function showCreateGroup() {
     var hidden = document.getElementById('show_create_group');
     if (hidden.style.display === 'block') {
@@ -158,8 +159,9 @@ $('.dropdown.keep-open').on({
     "click":             function() { this.closable = true; },
     "hide.bs.dropdown":  function() { return this.closable; }
 });
-                            </script>
-                        </ul>
+                                </script>
+                            </ul>
+                        </li>
                         <hr/>
                         <h4>All:</h4>
                         <ul class="nav" style="font-size: 15px;">   
@@ -217,7 +219,7 @@ if(!moisture){
 
 //what determines the status display is the sum of all level attention
 var code = lvl1att + lvl2att + lvl3att;
-document.write("<p><strong>" + stat.fontsize(5)  + "</strong> ");
+//document.write("<p><strong>" + stat.fontsize(5)  + "</strong> ");
 if(code == 0){
     txt  = "It's All Good :)";
     document.write(txt.fontcolor("#009b09").fontsize(4));
@@ -295,7 +297,7 @@ else{
                         </div>
                     </div>
                 </div>
-                
+
             </div><!-- End stage and sidebar-->
         </div>
         <script src="dist/bundle.js"></script>
