--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -73,9 +73,9 @@ function doWork() {
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar">
-                        <span class="icon-bar" />
-                        <span class="icon-bar" />
-                        <span class="icon-bar" />
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
                     </button>
                     <a class="navbar-brand" href="dashboard.html">PlantPi</a>
                 </div>
@@ -90,13 +90,13 @@ function doWork() {
                             </a>
                         </li>
                         <!--<li><a><span class="glyphicon glyphicon-user"></span> TheLegend27</a></li>-->
-                        <li> <a href="settings.html"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
-                        <li><a id="Leaf"><span class="glyphicon glyphicon-leaf"></span></a></li>
+                        <li><a href="settings.html"><span class="glyphicon glyphicon-cog">&nbsp;</span>Settings</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
+                        <li><a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a></li>
                         <li id="Easter" class="EasterEgg">
                             <div class="EasterEgg-content">
                                 <span class="close">&times;</span>
-                                <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%">
+                                <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%" alt="an easter egg">&nbsp;</img>
                                 <p style="color:white" >It's a feature :)</p>
                             </div>
                         </li>
@@ -127,19 +127,17 @@ function doWork() {
                                     </ul>
                                 </li>
                                 <li id="groupsListContainer"></li>
-                                <br/>
                                 <li style="font-size: 12px; float: right;"><a href="settings.html">Manage Groups</a></li>
                                 <li style="font-size: 20px; float: left;"><a onclick="showCreateGroup()">+</a></li>
-
-
-                                <div id="show_create_group" style="display: none;">
-                                    <form action="/create-group" method="post">
-                                        <input type="hidden" value=username name="user" id="uname" />
-                                        <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
-                                        <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
-                                    </form>
-                                </div>
-                                <script>
+                                <li>
+                                    <div id="show_create_group" style="display: none;">
+                                        <form action="/create-group" method="post">
+                                            <input type="hidden" value=username name="user" id="uname" />
+                                            <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
+                                            <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
+                                        </form>
+                                    </div>
+                                    <script>
 function showCreateGroup() {
     var hidden = document.getElementById('show_create_group');
     if (hidden.style.display === 'block') {
@@ -158,16 +156,17 @@ $('.dropdown.keep-open').on({
     "click":             function() { this.closable = true; },
     "hide.bs.dropdown":  function() { return this.closable; }
 });
-                                </script>
+                                    </script>
+                                </li>
                             </ul>
                         </li>
-                        <h4>All:</h4>
-                        <ul class="nav" style="font-size: 15px;">   
-                            <li id="plantListContainer"></li>
-                            <li><a href="">Plant A
-                                    <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;"></button></a></li>
-                            <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
-                        </ul>
+                    </ul>
+                    <h4>All:</h4>
+                    <ul class="nav nav-pills nav-stacked" style="font-size: 15px;">
+                        <li id="plantListContainer"></li>
+                        <li><a href="">Plant A
+                                <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;" /></a></li>
+                        <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;</button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
                     </ul>
                 </div>
             </div>  
@@ -177,7 +176,7 @@ $('.dropdown.keep-open').on({
                 <div class="col-md-12">
                     <br/>
                     <!--Spawn button for sidebar collapse for better resizing compatability-->
-                    <p class="visible-xs"> <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button> </p>
+                    <p class="visible-xs"> <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left">&nbsp;</i></button> </p>
                     <!--HEADER PLANT NAME, controled by js script dowork()-->
                     <h1> Let's see how <strong id = "pname"></strong> is doing:</h1> <br/>
 
