--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -96,7 +96,7 @@ function doWork() {
                         <li id="Easter" class="EasterEgg">
                             <div class="EasterEgg-content">
                                 <span class="close">&times;</span>
-                                <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%" alt="an easter egg">&nbsp;</img>
+                                <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%" alt="an easter egg">
                                 <p style="color:white" >It's a feature :)</p>
                             </div>
                         </li>
@@ -111,14 +111,14 @@ function doWork() {
             <div id="sidebar" class="sidebar-offcanvas">
                 <br /> <br />
                 <div class="col-xs-12"> 
-                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"></span></a></h3><br/>
+                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;">&nbsp;</span></a></h3><br/>
                     <h4>Groups:</h4>
 
                     <ul class="nav nav-pills nav-stacked">
                         <li>
                             <ul class="nav" id="groupsList">
                                 <li class="dropdown keep-open">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret" /></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret">&nbsp;</span></a>
                                     <ul class="dropdown-menu keep-open" role="menu">
                                         <li><a href="#">Cara </a></li>
                                         <li><a href="#">Raspy</a></li>
@@ -164,9 +164,11 @@ $('.dropdown.keep-open').on({
                     <h4>All:</h4>
                     <ul class="nav nav-pills nav-stacked" style="font-size: 15px;">
                         <li id="plantListContainer"></li>
-                        <li><a href="">Plant A
-                                <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;" /></a></li>
-                        <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;</button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
+                        <li><a href="#">Plant A
+                                <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;">&nbsp;</button></a></li>
+                        <li>
+                            <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;</button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
+                        </li>
                     </ul>
                 </div>
             </div>  
@@ -263,15 +265,11 @@ else{ //if nothing needs attention, then is "all good" :)
                                     <p>
                                 <script>
 document.write("Current: " + celcius + "&#8451, " + faren + "&#8457");
-if(faren > 119){
-    document.write("Your plant is not far from spontaneously combusting! <span class=\"glyphicon glyphicon-fire\"></span> throw some ice on it or something! <span class=\"glyphicon glyphicon-ice-lolly\"></span>");
-}
                                 </script>
                                     </p>
                                 </li>
                                 <li id="Level">
                                     Mositure Level
-                                </li>
                                 <script>
 if(moisture){
     document.write("<p> There seems to be mositure present :) </p>");
@@ -280,6 +278,7 @@ else{
     document.write("<p>Needs some moisture!</p>");
 }
                                 </script>
+                                </li>
                                 <li id="Level">
                                     Light Level
                                 </li>
