fix spelling errors and last of the HTML linter problems

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -269,15 +269,17 @@ document.write("Current: " + celcius + "&#8451, " + faren + "&#8457");
                                     </p>
                                 </li>
                                 <li id="Level">
-                                    Mositure Level
+                                    Moisture Level&nbsp;
+                                    <p>
                                 <script>
 if(moisture){
-    document.write("<p> There seems to be mositure present :) </p>");
+    document.write("There seems to be moisture present :)");
 }
 else{
-    document.write("<p>Needs some moisture!</p>");
+    document.write("Needs some moisture!");
 }
                                 </script>
+                                    </p>
                                 </li>
                                 <li id="Level">
                                     Light Level
